src/test/deca/syntax/valid/created/affichage/print_var_BOOLEAN.deca
// Description:
//  affiche variable boolean
// Resultats :
// 		OK


{
   boolean x = true;
   println(x);
}
