src/test/deca/syntax/invalid/created/init_no_value/boolean.deca
// Description:
//      Affectation sans valeur
//  Resultats:
//      Error Ligne 7 : mismatched input ';' expecting {'false', 'new', 'null', 'readInt', 'readFloat', 'this', 'true', IDENT, '-', '(', '!', INT, FLOAT, STRING}

{
    boolean x =;
}